--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@300&display=swap");
 
 $lightGrey: #e0e0e0;
-$darkGrey: #303030;
-$darkerGrey: #404040;
-$darkerGrey2: #454545;
+$darkestGrey: #252525;
+$darkGrey1: #303030;
+$darkerGrey2: #404040;
+$darkerGrey3: #454545;
 $light: #f5f5f5;
 
 $greenLightest: #e8f5e9;
@@ -28,7 +29,8 @@ $yellowDarkest: #bc5100;
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
 
     body {
         margin: 0;
@@ -38,7 +40,7 @@ html {
             position: sticky;
             top: 0;
             z-index: 100;
-            background-color: $darkGrey;
+            background-color: $darkGrey1;
             box-shadow: 0 0 0.1rem black;
 
             ul {
@@ -51,7 +53,7 @@ html {
                 align-content: center;
                 align-self: center;
 
-                li>a {
+                li > a {
                     display: block;
                     color: $light;
                     font-weight: 100;
@@ -61,19 +63,18 @@ html {
                     padding: 0.8rem 1rem;
 
                     &.active {
-                        background-color: $darkerGrey;
+                        background-color: $darkerGrey2;
                     }
 
                     &:hover {
-                        background-color: $darkerGrey2;
+                        background-color: $darkerGrey3;
                         font-weight: 400;
                     }
                 }
-
             }
         }
 
-        @media(max-width: 520px) {
+        @media (max-width: 520px) {
             nav {
                 display: none;
             }
@@ -89,21 +90,46 @@ html {
 
             div {
                 padding: 2rem;
-                color: $darkGrey;
+                color: $darkGrey1;
 
                 text-align: justify;
                 text-justify: inter-word;
             }
 
-            @media(max-width: 768px) {
+            @media (max-width: 768px) {
                 div {
                     padding: 1rem;
                 }
             }
 
-            @media(max-width: 520px) {
+            @media (max-width: 520px) {
                 div {
                     padding: 0.5rem;
+                }
+            }
+
+            .links {
+                margin-top: 1rem;
+                padding: 0;
+
+                button {
+                    background-color: unset !important;
+                    box-shadow: unset !important;
+                    border: unset !important;
+
+                    a > img {
+                        border-radius: 50%;
+                        border: 1px solid $light;
+                        height: 2rem;
+                        width: 2rem;
+                        padding: 0.5rem;
+                        background-color: $darkGrey1;
+
+                        &:hover {
+                            border: unset;
+                            box-shadow: 1px 1px 0.5rem $darkestGrey;
+                        }
+                    }
                 }
             }
 
@@ -113,6 +139,7 @@ html {
                 position: relative;
                 top: 0;
                 height: calc(100vh - 7rem);
+                min-height: 25rem;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -135,15 +162,15 @@ html {
                     line-height: 0rem;
                     margin-top: 3rem;
                     margin-bottom: 3rem;
-                    font-family: 'Julius Sans One', sans-serif;
+                    font-family: "Julius Sans One", sans-serif;
                 }
 
                 #short-desc {
                     font-size: 1.5rem;
-                    font-family: 'Roboto Mono';
+                    font-family: "Roboto Mono";
                 }
 
-                @media(max-width: 520px) {
+                @media (max-width: 520px) {
                     #name {
                         font-size: 14vw;
                         margin-top: 6vw;
@@ -157,30 +184,6 @@ html {
                     #avatar {
                         height: 30vw;
                         width: 30vw;
-                    }
-                }
-
-
-                #links {
-                    margin-top: 1rem;
-
-                    button {
-                        background-color: unset !important;
-                        box-shadow: unset !important;
-                        border: unset !important;
-
-                        a>img {
-                            border-radius: 50%;
-                            border: 1px solid $light;
-                            height: 2rem;
-                            width: 2rem;
-                            padding: 0.5rem;
-
-                            &:hover {
-                                border: unset;
-                                box-shadow: 1px 1px 0.5rem #000;
-                            }
-                        }
                     }
                 }
 
@@ -198,7 +201,7 @@ html {
                             justify-content: center;
                             padding: 0.6rem 1rem;
                             color: $light;
-                            font-family: 'Roboto Mono';
+                            font-family: "Roboto Mono";
                             font-size: 1.1rem;
                             text-transform: uppercase;
 
@@ -255,7 +258,7 @@ html {
                     }
                 }
 
-                @media(max-width: 1080px) {
+                @media (max-width: 1080px) {
                     .card-deck {
                         grid-template-columns: 1fr;
                     }
@@ -275,7 +278,7 @@ html {
                     justify-content: center;
 
                     $li-padding: 0.5rem;
-                    $animation-delay: .5s;
+                    $animation-delay: 0.5s;
 
                     @mixin border-radius($radius) {
                         -webkit-border-radius: $radius;
@@ -342,29 +345,29 @@ html {
                                 #progress-css {
                                     -webkit-animation-name: progress-css;
                                     animation-name: progress-css;
-                                    -webkit-animation-delay: $animation-delay*2;
-                                    animation-delay: $animation-delay*2;
+                                    -webkit-animation-delay: $animation-delay * 2;
+                                    animation-delay: $animation-delay * 2;
                                 }
 
                                 #progress-javascript {
                                     -webkit-animation-name: progress-javascript;
                                     animation-name: progress-javascript;
-                                    -webkit-animation-delay: $animation-delay*3;
-                                    animation-delay: $animation-delay*3;
+                                    -webkit-animation-delay: $animation-delay * 3;
+                                    animation-delay: $animation-delay * 3;
                                 }
 
                                 #progress-php {
                                     -webkit-animation-name: progress-php;
                                     animation-name: progress-php;
-                                    -webkit-animation-delay: $animation-delay*4;
-                                    animation-delay: $animation-delay*4;
+                                    -webkit-animation-delay: $animation-delay * 4;
+                                    animation-delay: $animation-delay * 4;
                                 }
 
                                 #progress-angular {
                                     -webkit-animation-name: progress-angular;
                                     animation-name: progress-angular;
-                                    -webkit-animation-delay: $animation-delay*5;
-                                    animation-delay: $animation-delay*5;
+                                    -webkit-animation-delay: $animation-delay * 5;
+                                    animation-delay: $animation-delay * 5;
                                 }
                             }
                         }
@@ -574,7 +577,7 @@ html {
 
                     a {
                         text-decoration: none;
-                        color: $darkGrey;
+                        color: $darkGrey1;
                     }
 
                     span {
@@ -652,7 +655,17 @@ html {
 
             #contact {
                 background-color: $yellowLightest;
-                
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+
+                .links {
+                    align-self: center;
+                    button > a > img {
+                        background-color: $yellowDarkest;
+                    }
+                }
+
                 .section-header {
                     color: $yellowDarkest;
                 }
@@ -662,22 +675,62 @@ html {
                     display: flex;
                     flex-direction: row;
                     justify-content: center;
+                    align-content: flex-start;
 
                     img {
-                        height: 30rem;
-                        width: 30rem;
+                        margin: 1rem;
+                        height: 15rem;
+                        width: 15rem;
                         border-radius: 1rem;
+                        justify-self: center;
+                    }
+
+                    .content {
+                        padding: 0;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+
+                        .content-name {
+                            font-size: large;
+                            color: $yellowDarkest;
+                            margin-top: 0.5rem;
+
+                            &:first-child {
+                                margin-top: 0;
+                            }
+                        }
+
+                        .content-value {
+                            a {
+                                text-decoration: none;
+                                color: unset;
+                            }
+                        }
                     }
                 }
 
                 @media (max-width: 768px) {
-                    flex-direction: column;
+                    .contact-container {
+                        flex-direction: column;
+                        justify-content: center;
+                        align-content: flex-start;
+
+                        img {
+                            align-self: center;
+                        }
+
+                        .content {
+                            justify-content: unset;
+                            text-align: center;
+                            align-content: center;
+                        }
+                    }
                 }
             }
         }
     }
 }
-
 
 /* #particles {
     position: fixed;
