--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -31,7 +31,7 @@ $yellowDarkest: #bc5100;
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
-
+    scroll-behavior: smooth;
     body {
         margin: 0;
         padding: 0;
@@ -61,6 +61,7 @@ html {
                     text-decoration: none;
                     text-transform: uppercase;
                     padding: 0.8rem 1rem;
+                    transition: all 50ms ease-in-out;
 
                     &.active {
                         background-color: $darkerGrey2;
@@ -74,7 +75,7 @@ html {
             }
         }
 
-        @media (max-width: 520px) {
+        @media (max-width: 768px) {
             nav {
                 display: none;
             }
@@ -88,7 +89,7 @@ html {
                 font-weight: 800;
             }
 
-            div {
+            section {
                 padding: 2rem;
                 color: $darkGrey1;
 
@@ -97,13 +98,13 @@ html {
             }
 
             @media (max-width: 768px) {
-                div {
+                section {
                     padding: 1rem;
                 }
             }
 
-            @media (max-width: 520px) {
-                div {
+            @media (max-width: 480px) {
+                section {
                     padding: 0.5rem;
                 }
             }
@@ -145,10 +146,6 @@ html {
                 align-items: center;
                 justify-content: center;
 
-                @media (max-width: 520px) {
-                    height: 100vh;
-                }
-
                 #avatar {
                     height: 8rem;
                     width: 8rem;
@@ -170,20 +167,20 @@ html {
                     font-family: "Roboto Mono";
                 }
 
-                @media (max-width: 520px) {
+                @media (max-width: 768px) {
                     #name {
-                        font-size: 14vw;
+                        font-size: 10vw;
                         margin-top: 6vw;
                         margin-bottom: 6vw;
                     }
 
                     #short-desc {
-                        font-size: 6vw;
+                        font-size: 4vw;
                     }
 
                     #avatar {
-                        height: 30vw;
-                        width: 30vw;
+                        height: 20vw;
+                        width: 20vw;
                     }
                 }
 
@@ -212,6 +209,11 @@ html {
                             }
                         }
                     }
+                }
+            }
+            @media (max-width: 768px) {
+                #intro {
+                    height: 100vh;
                 }
             }
 
@@ -678,7 +680,7 @@ html {
                     align-content: flex-start;
 
                     img {
-                        margin: 1rem;
+                        margin: 0 1rem 1rem 1rem;
                         height: 15rem;
                         width: 15rem;
                         border-radius: 1rem;
@@ -758,10 +760,10 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #303030;
+    box-shadow: inset 0 0 5px $darkerGrey3;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #505050;
+    background: $darkGrey1;
 }
